[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ltiprobe"
version = "0.3.0"
description = "Mesure les temps de reponse HTTP et DNS de sites web"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["tqdm>=4.0", "hdrhistogram>=0.9.0", "pyyaml>=6.0"]
keywords = ["ping", "http", "dns", "network", "latency"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bglatence/ltiprobe"
Issues = "https://github.com/bglatence/ltiprobe/issues"

[project.scripts]
ltiprobe = "ltiprobe.main:main"

[tool.setuptools.packages.find]
include = ["ltiprobe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:ctypes",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    "src/",
    "venv/",
    ".git/",
    "__pycache__",
    "*.egg-info",
]