[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ltiprobe"
version = "1.4.0"
description = "HTTP/DNS/ICMP/TCP/TLS latency tool with SLO validation, jitter, packet loss, MOS score (ITU-T G.107), CDN detection, Prometheus export and webhook alerting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["tqdm>=4.0", "hdrhistogram>=0.9.0", "pyyaml>=6.0", "dnspython>=2.0"]
keywords = ["ping", "http", "dns", "network", "latency", "slo", "monitoring", "cdn", "jitter", "mos", "voip", "prometheus", "webhook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bglatence/ltiprobe"
Issues = "https://github.com/bglatence/ltiprobe/issues"

[project.scripts]
ltiprobe = "ltiprobe.main:main"

[tool.setuptools.packages.find]
include = ["ltiprobe*"]

[tool.setuptools]
exclude-package-data = {"*" = ["ROADMAP.md"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:ctypes",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    "src/",
    "venv/",
    ".git/",
    "__pycache__",
    "*.egg-info",
]